--- a/Testes de Sistemas/Teste Jest/geometria_jest/package.json
+++ b/Testes de Sistemas/Teste Jest/geometria_jest/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "testes": "file:",
-    "yarn": "^1.22.22"
+    "testes": "file:"
   },
   "name": "testes",
   "version": "1.0.0",
