--- a/Back DDS/package.json
+++ b/Back DDS/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "node": "^23.11.0"
+  }
 }
