--- a/Back DDS/Node-Express/package.json
+++ b/Back DDS/Node-Express/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "back-dds",
+  "name": "express",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "node": "^23.11.0"
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
