--- a/Back DDS/Node-Express/package.json
+++ b/Back DDS/Node-Express/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.14.1",
+    "pg": "^8.15.6"
   }
 }
